@@ -227,7 +227,7 @@ public class BallerinaDocGenerator {
         if (!sourceLocation.isEmpty()) {
             output = output.resolve(moduleLib.modules.get(0).orgName).resolve(moduleLib.modules.get(0).id)
                     .resolve(moduleLib.modules.get(0).version).resolve(ICON_NAME);
-            Path iconPath = Paths.get(sourceLocation);
+            Path iconPath = Path.of(sourceLocation);
             try {
                 byte[] iconByteArray = Files.readAllBytes(iconPath);
                 Files.write(output, iconByteArray);
